# JavaNewFeature

./: .gitignore  README.md  build.gradle  kls_database.db  settings.gradle
protocol/: build.gradle.kts
protocol/src/main/kotlin/com/wp/protocol/: Receiver.kt
src/main/cpp/: CMakeLists.txt  Makefile  main
src/main/cpp/include/: ffm.h
src/main/cpp/src/: ffm.cpp  main.cpp
src/main/java/com/edu/jdk/leetcode/: FindSameCharWord.java  FizzBuzz.java  LongestSequence.java  MoveZero.java  TwoNumSum.java
src/main/java/com/edu/jdk/v09/: ApiSupportWithHttp2.java  CollectionNew.java  G1AsDefaultGC.java  InterfacePrivateMethod.java  JShell.java  Main.java  Modular.java  OptionalEnhance.java  StreamApi.java  TryResource.java
src/main/java/com/edu/jdk/v10/: Main.java  VarAnalysis.java
src/main/java/com/edu/jdk/v11/: FileApi.java  Main.java  Str.java  Threads.java  VarUseWithLambda.java  WebClient.java
src/main/java/com/edu/jdk/v12/: Main.java  SwitchExpress.java
src/main/java/com/edu/jdk/v13/: Main.java  TextBlock.java
src/main/java/com/edu/jdk/v14/: Main.java  SwitchExpress.java
src/main/java/com/edu/jdk/v15/: Main.java  TextBlock.java
src/main/java/com/edu/jdk/v16/: InstanceOfModel.java  Main.java  RecordData.java  StreamApi.java
src/main/java/com/edu/jdk/v17/: Main.java  RandomNumber.java  SealedClass.java
src/main/java/com/edu/jdk/v18/: Main.java
src/main/java/com/edu/jdk/v21/: FFm.java  Main.java  OrderCollection.java  RecordDeconstruction.java  RecordPerson.java  StringTemplate.java  (+2 more)
src/test/java/com/edu/jdk/: JavaNewFeatureApplicationTests.java
(+35 files in other folders)
